force-app/main/default/objects/Task_Custom__c/Task_Custom__c.object-meta.xml
<CustomObject>
    <label>Task Custom</label>
    <nameField>
        <displayFormat>TC-{00000}</displayFormat>
        <label>Task Custom</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Custom</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>