force-app/main/default/objects/Task_Custom__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Task Custom</relationshipLabel>
    <relationshipName>Task_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>