force-app/main/default/objects/Task_Custom__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Task Custom</relationshipLabel>
    <relationshipName>Task_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>