force-app/main/default/objects/Task_Custom__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Task Custom</relationshipLabel>
    <relationshipName>Task_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>