force-app/main/default/objects/Task_Custom__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Task Custom</relationshipLabel>
    <relationshipName>Task_Custom</relationshipName>
    <type>Lookup</type>
</CustomField>