force-app/main/default/objects/Task_Custom__c/listViews/Branch_Operations_Surat_Task_Custom.listView-meta.xml
<ListView>
    <fullName>Branch_Operations_Surat_Task_Custom</fullName>
    <filterScope>Queue</filterScope>
    <label>Branch Operations - Surat</label>
    <queue>Branch_Operations_Surat</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>